css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');

:root {
    --green-color: #2D4244;
    --gold-color: #E3C67F;
    --white-color: #FCF9F2;
    
  }

*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html {
    scroll-behavior: smooth;
  }

body{
    margin: 0;
    padding: 0;
    overflow-x: hidden;
    font-family: 'Lato', sans-serif;
}

#main-page{
    font-size: 14px;
    /* position: relative;
    top: 0;
    left: 0; */
    color: var(--green-color);
    overflow-x: hidden;
    height: 100vh;
}

nav{
    height: 80px;
    /* box-shadow: 0px 2px 36px #bababa; */
    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
    background: #fff;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0px 50px;
    font-size: 1em;
    z-index: 98;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    width: 100%;
}

.logo{
    height: 35px;
}

.nav-list{
    list-style-type: none;
    display: flex;
}

.nav-list li{
    padding: 10px 14px;
    margin: 0px 10px;
    cursor: pointer;
    /* border: 2px solid red; */
}

.nav-list li:hover{

}

.header-bg{
    height: calc(100vh - 80px);
    width: 100%;
    position: absolute;
    top: 80px;
    left: 0;
    z-index: 0;
    object-fit: cover;
    transition: 1.5s ease;
    overflow-x: hidden;
}

.first-img{
    /* object-fit: cover; */
    left: 28vw;
}

.second-img{
    object-fit: cover;
    left: 27vw;
    opacity: 0;
}

.third-img{
    left: 30vw;
    /* top: 200px; */
    object-fit: cover;
    opacity: 0;
}

.header-bg-gradient{
    position: absolute;
    top: 80px;
    left: 0;
    height: calc(100vh - 80px);
    width: 100%;
    z-index: 1;
    background: rgb(255,255,255);
    background: linear-gradient(100deg, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%);
}

.header-content{
    /* position: relative; */
    color: var(--green-color);
    padding: 30vh 0 0 10vw;
    z-index: 2;
}

.header-title{
    z-index: 2;
    font-size: 3.4em;
    font-weight: 900;
    position: relative;
}

.header-description{
    position: relative;
    z-index: 2;
    width: 500px;
    margin: 30px 0 0;
    font-size: 1.2em;
    line-height: 1.6em;
    text-align: justify;
}

.header-btn{
    position: relative;
    z-index: 2;
    margin: 30px 0 0;
    width: 220px;
    height: 40px;
    background: var(--gold-color);
    color: var(--green-color);
    border: none;
    border-radius: 2px;
    font-weight:700;
    letter-spacing: 1.5px;
    transition: 0.5s;
    cursor: pointer;
}

.header-btn:hover{
    background: var(--green-color);
    color: var(--white-color);
    transition: 0.5s;
}

.change-bg-box{
    position: absolute;
    bottom: 50px;
    left: 50%;
    transform: translateX(-50%);
    /* border: 1px solid black; */
    z-index: 2;
}

.change-bg-btn{
    width: 24px;
    height: 4px;
    margin: 2px;
    border: none;
    border-radius: 3px;
    background: #EAEAEA;
    cursor: pointer;
}

.change-first{
    background: #C8C8C8;
}

.header-contact-list{
    z-index: 7;
    position: absolute;
    right: 0px;
    /* top: calc(32vh); */
    top: 50vh;
    transform: translateY(-50%);
    list-style-type: none;
    overflow-x: hidden;
}

.header-list-item{
    font-weight: 700;
    font-size: 16px;
    background: hsl(0,0%,100%, 0.8);
    /* backdrop-filter: blur(100%); */
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    padding: 40px 80px 40px 64px;
    margin: 30px 0;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
    position: relative;
    max-height: 62px;
    display: flex;
    align-items: center;
    transition: 0.4s ease;
    right: -360px;
    animation: header_contact_hide forwards 8s cubic-bezier(0.82, -0.1, 0.78, 0.5) 1.6s;
    /* width: 420px; */
}


.header-list-item-first-active{
        transform: translate(-140px);
        background-color: hsl(0,0%,100%, 1) !important;
    transition: 0.4s !important;

}

.header-list-item-second-active{
        transform: translate(-260px);
        background-color: hsl(0,0%,100%, 1) !important;
    transition: 0.4s !important;
}

.header-list-item-third-active{
        transform: translate(-320px);
        background-color: hsl(0,0%,100%, 1) !important;
    transition: 0.4s !important;
}

@keyframes header_contact_hide {
    0%{
        right: -360px;
        background-color: hsl(0,0%,100%, 0.8);
    }

    10%, 90%{
        right: -40px;
        background-color: hsl(0,0%,100%, 1);
    }

    
    100%{
        right: -360px;
        background-color: hsl(0,0%,100%, 0.8);
    }
}


.header-list-item a{
    text-decoration: none;
    color: var(--green-color);
    padding: 3px 0;
}

.header-list-item::before{
    content: '';
    position: absolute;
    /* background: red; */
    background-image: url("../images/icons/home.svg");
    background-size: cover;
    width: 20px;
    height: 20px;
    top: 50%;
    transform: translateY(-50%);
    left: 25px;
}

.item-first{
    /* padding: 6px 40px 6px 80px; */
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-direction: column;
}

.item-first::before{
    background-image: url("../images/icons/phone-green75.svg");
    width: 22px;
    height: 20px;

}

.item-second::before{
    background-image: url("../images/icons/mail-green75.svg");
    background-size: cover;
    width: 22px;
    height: 14px;
    left: 24px;
}

#content-box{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 200px;
    font-size: 14px;
    color: var(--green-color);
}

#about-me-box{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 200px;
    font-size: 14px;
    color: var(--green-color);
}

.content-left{
    min-width: 350px;
    max-width: 440x;
    margin-right: 100px;   
    opacity: 0;
    transition: 0.5s ease; 
}
/* ... */

